--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,14 @@
+$primary:       rgb(152, 156, 145);
+$secondary:     rgb(82, 129, 196);
+$success:       rgba(75,175,7, 1);
+$info:          rgb(225, 233, 214);
+$warning:       rgb(255, 205, 23);
+$danger:        rgba(201,73,73, 1);
+$light:         rgba(220,220,220, 1);
+$dark:          rgb(35, 31, 32);
+
 @import 'loading';
-@import 'main';
+@import 'forms-main';
 @import 'calendar';
 
 @mixin transition($speed) {
@@ -12,16 +21,15 @@
 
 #errorBox {
   opacity: 0;
-  padding: 5px 10px;
 
-  border: $error;
-  background-color: $sassy-base-color;
-  margin: 10px 0;
   span {
+    border: $danger;
+    background-color: lighten($danger, 35%);
+    margin: 5px 0;
     display: block;
-    padding: 5px;
-    font-size: 1.2em;
-    color: $error;
+    padding: 2px 5px;
+    font-size: 1em;
+    color: $danger;
   }
   &.show {
     opacity: 1;
@@ -48,4 +56,10 @@
     }
   }
 
+}
+
+.calendar-day {
+  button.calnav {
+    background: $light;
+  }
 }
