--- a/sass/inputs/_select.scss
+++ b/sass/inputs/_select.scss
@@ -7,7 +7,7 @@
     position: absolute;
     top: rem(10);
     right: rem(15);
-    color: $sassy-base-color;
+    color: $primary; 
     pointer-events: none;
   }
 
@@ -26,18 +26,18 @@
     font-family: inherit;
     font-size: rem(14);
 
-    border: rem(1) solid lighten($sassy-base-color, 10%);
+    border: rem(1) solid lighten($primary, 10%);
     border-radius: rem(3);
     outline: none;
 
     background-color: white;
 
     &:focus {
-      border-color: $sassy-accent-color;
+      border-color: $secondary;
     }
 
     &:disabled {
-      background-color: $sassy-disabled-color;
+      background-color: $info;
       cursor: not-allowed;
     }
   }
@@ -52,14 +52,14 @@
   font-family: inherit;
   font-size: rem(14);
 
-  border: rem(1) solid lighten($sassy-base-color, 10%);
+  border: rem(1) solid lighten($primary, 10%);
   border-radius: rem(3);
   outline: none;
 
   background-color: white;
 
   &:focus {
-    border-color: $sassy-accent-color;
+    border-color: $secondary;
   }
 
   &:disabled {
