--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,16 +1,12 @@
-$primary:       rgb(82, 129, 196);
-$secondary:     rgb(152, 156, 145);
-$success:       rgba(75,175,7, 1);
+$primary:       rgb(67, 160, 217);
+$secondary:     rgb(217, 67, 160);
+$tertiary:      rgb(160, 217, 67);
+$success:       $tertiary;
 $info:          rgb(225, 233, 214);
 $warning:       rgb(255, 205, 23);
 $danger:        rgba(201,73,73, 1);
 $light:         rgba(220,220,220, 1);
 $dark:          rgb(35, 31, 32);
-
-@import 'loading';
-@import 'forms-main';
-@import 'calendar';
-
 @mixin transition($speed) {
   -webkit-transition: all $speed ease;
   -moz-transition: all $speed ease;
@@ -18,6 +14,13 @@ $dark:          rgb(35, 31, 32);
   -o-transition: all $speed ease;
   transition: all $speed ease;
 }
+
+
+@import 'loading';
+@import 'forms-main';
+@import 'calendar';
+
+
 #mindevents_meta_box {
   button{
     cursor: pointer;
@@ -67,6 +70,7 @@ $dark:          rgb(35, 31, 32);
       .form-section {
         flex-basis: 49%;
         padding: 0 1%;
+
         &:first-child{
           padding-left: 0;
         }
@@ -77,16 +81,14 @@ $dark:          rgb(35, 31, 32);
           margin: 3px;
         }
       }
+      .remove {
+        display: flex;
+        align-items: center;
+        padding: 16px 4px 0;
+        font-size: 1.5em;
+        color: $danger;
+      }
     }
 
-  }
-
-  .calendar-nav {
-    margin: 5px 0;
-    display: flex;
-    justify-content: space-between;
-    button.calnav {
-
-    }
   }
 }
