--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,9 +20,8 @@ $dark:          rgb(35, 31, 32);
 @import 'forms-main';
 @import 'calendar';
 
-
-#mindevents_meta_box {
-  button{
+#mindevents_meta_box, {
+  a.button, button{
     cursor: pointer;
     border: 1px solid darken($primary, 10%);
     padding: 5px 7px;
@@ -43,7 +42,14 @@ $dark:          rgb(35, 31, 32);
       background: $secondary;
       border: darken($secondary, 10%);
     }
+    &.button-white {
+      background: #fff;
+      color: $dark;
+    }
   }
+}
+#mindevents_meta_box {
+
 
   #errorBox {
     opacity: 0;
@@ -67,26 +73,34 @@ $dark:          rgb(35, 31, 32);
     .time-block {
       display: flex;
       flex-direction: row;
+      flex-wrap: wrap;
+      margin-left: -10px;
+      margin-right: -10px;
+      margin-bottom: 25px;
+      position: relative;
       .form-section {
-        flex-basis: 49%;
+        flex-basis: 48%;
         padding: 0 1%;
-
-        &:first-child{
-          padding-left: 0;
-        }
-        &:last-child{
-          padding-right: 0;
+        &.full {
+          flex-basis: 100%;
         }
         p {
           margin: 3px;
         }
       }
       .remove {
+        cursor: pointer;
         display: flex;
         align-items: center;
-        padding: 16px 4px 0;
+        padding: 16px;
         font-size: 1.5em;
-        color: $danger;
+        position: absolute;
+        color: #c94949;
+        left: 0;
+        top: 39%;
+      }
+      &:not(:first-child) {
+        padding-left: 40px;
       }
     }
 
