--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,6 +47,9 @@ $dark:          rgb(35, 31, 32);
       color: $dark;
     }
   }
+  h3 {
+    margin-bottom: 3px;
+  }
 }
 #mindevents_meta_box {
 
@@ -59,7 +62,8 @@ $dark:          rgb(35, 31, 32);
       background-color: lighten($danger, 35%);
       margin: 5px 0;
       display: block;
-      padding: 2px 5px;
+      padding: 5px 7px;
+      font-weight: bold;
       font-size: 1em;
       color: $danger;
     }
