combined two classes into one... needs some additional testing.

--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -29,7 +29,7 @@
   }
 
 
-  table.SimpleCalendar {
+  table.mindEventCalendar {
   	font-family: monospace;
   	width: 100%;
     thead {
@@ -127,7 +127,7 @@
       margin: 0;
     }
   }
-  table.SimpleCalendar {
+  table.mindEventCalendar {
   	width: 100%;
   	th {
   		background: #fff;
