added event archive and filters.

--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -267,6 +267,11 @@
     }
   }
 }
+#archiveCalendar {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 15px;
+}
 #mindEventList {
   h4.day-label {
     text-align: center;
