--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,7 +14,21 @@ $dark:          rgb(35, 31, 32);
   -o-transition: all $speed ease;
   transition: all $speed ease;
 }
-
+@mixin button-link {
+  border: 1px solid #fff;
+  border-left: 5px solid #fff;;
+  padding: 14px 25px;
+  font-size: 1.3em;
+  font-weight: bold;
+  color: #fff;
+  white-space: nowrap;
+  @include transition(300ms);
+  &:hover {
+    border-left-width: 10px;
+    background-color: rgba(255,255,255,.3);
+    @include transition(100ms);
+  }
+}
 
 @import 'loading';
 @import 'forms-main';
