--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -131,7 +131,7 @@
   	width: 100%;
     table-layout: fixed;
   	th {
-  		background: #fff;
+  		background: rgba(255,255,255,.7);
   		color: $dark;
       text-align: center;
   		font-size: 1.1em;
@@ -194,7 +194,19 @@
                 transform: scale(1.05);
               }
             }
+            &.mobile {
+              overflow: hidden;
+              span.sub-event-toggle {
+                text-indent: -9999999px;
+                cursor: pointer;
+                width: 40%;
+                border-radius: 20px;
+                max-height: 18px;
+                max-width: 18px;
+              }
+            }
     			}
+
         }
         &.meta-container {
           height: 0;
@@ -269,7 +281,6 @@
     display: flex;
     .featured-image-wrap {
       flex-basis: 35%;
-      padding-right: 15px;
     }
     .content-wrap {
       flex-basis: 65%;
@@ -325,7 +336,6 @@
     .item_meta_container {
       flex-basis: 100%;
       display: flex;
-      flex-direction: row;
       padding-left: 15px;
       .meta_item {
         padding: 6px 0;
@@ -346,10 +356,10 @@
           flex-basis: 10%;
         }
         &.cost {
-          flex-basis: 10%;
+          flex-basis: 18%;
         }
         &.description {
-          flex-basis: 60%;
+          flex-basis: 52%;
         }
         &.link {
           flex-basis: 20%;
