--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -1,3 +1,9 @@
+#ui-datepicker-div {
+  background: #fff;
+  padding: 5px;
+  -webkit-box-shadow: 0 0 6px 0 rgba(1,1,1,.3);
+  box-shadow: 0 0 6px 0 rgba(1,1,1,.3);
+}
 .calendar-nav {
   margin: 5px 0;
   display: flex;
@@ -27,8 +33,6 @@
   .la-ball-fall {
     position: inherit;
   }
-
-
   table.mindEventCalendar {
   	font-family: monospace;
   	width: 100%;
@@ -86,23 +90,33 @@
   			}
 
   			div.event {
-          position: relative;;
+          position: relative;
+          display: flex;
+          flex-wrap: nowrap;
           span {
             font-size: .65em;
             padding: 5px;
-            margin: 2px 1px;
-            line-height: 1em;
-            border-bottom: 1px solid #bbb;
+            margin: 2px 0px;
             background: #858585;
-            color: #fff;
             white-space: nowrap;
-            display: block;
+            width: 83%;
             &.new {
               background: $success;
             }
             &:hover {
-              border-top: 4px solid darken($danger, 10%);
+              opacity: .9;
               cursor: pointer;
+            }
+            &.delete {
+              flex-basis: 17%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              text-align: center;
+              font-size: 1em;
+              background: $danger;
+              color: #fff;
+              padding: 0;
             }
           }
   			}
@@ -110,6 +124,62 @@
   		}
   	}
 
+  }
+  #editBox {
+    position: absolute;
+    z-index: 100;
+    background: rgba(255,255,255,.9);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    .container {
+      width: 70%;
+      margin: 0 auto;
+      padding: 10px;
+      h3 {
+        text-align: center;
+        margin-bottom: 10px;
+      }
+      .buttonContainer {
+        width: 100%;
+        margin-bottom: 10px;
+        button.edit-button {
+          &.update-event{
+            display: block;
+            width: 60%;
+            margin: 0 auto;
+            font-size: 1.2em;
+            padding: 10px;
+          }
+          &.cancel {
+            margin: 0 auto;
+            display: block;
+            background-color: $danger;
+            border-color: darken($danger, 20%);
+            &:hover {
+              background-color: darken($danger, 20%);
+            }
+          }
+        }
+      }
+      button.edit-button {
+
+        &.update-event{
+          display: block;
+          width: 40%;
+          margin: 0 auto;
+          font-size: 1.2em;
+          padding: 10px;
+        }
+        &.cancel {
+          margin: 0 auto;
+          display: block;
+          background-color: $danger;
+          border-color: darken($danger, 20%);
+        }
+      }
+    }
   }
 }
 
