--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -113,10 +113,14 @@
               justify-content: center;
               align-items: center;
               text-align: center;
-              font-size: 1em;
-              background: $danger;
-              color: #fff;
-              padding: 0;
+              font-size: .9em;
+              background: #fff;
+              color: $danger;
+              padding: 0 2px;
+              &:hover {
+                background: $danger;
+                color: #fff;
+              }
             }
           }
   			}
