--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,7 +16,7 @@ $dark:          rgb(35, 31, 32);
 }
 @mixin button-link {
   border: 1px solid #fff;
-  border-left: 5px solid #fff;;
+  border-left: 5px solid #fff;
   padding: 6px 8px;
   margin-bottom: 4px;
   font-size: .9em;
@@ -101,7 +101,7 @@ $dark:          rgb(35, 31, 32);
       flex-direction: row;
       flex-grow: 1;
     }
-    .add-offer, .remove-offer {
+    .add-offer, .remove-offer, .add-offer-edit, .remove-offer-edit {
       width: 10%;
       text-align: center;
       font-size: 2em;
@@ -111,7 +111,7 @@ $dark:          rgb(35, 31, 32);
         display: block;
       }
     }
-    .remove-offer {
+    .remove-offer, .remove-offer-edit {
       color: $danger;
     }
   }
