--- a/sass/loading.scss
+++ b/sass/loading.scss
@@ -32,7 +32,11 @@
     border: 0 solid currentColor;
 }
 .la-ball-fall {
-    height: 18px;
+  width: 100%; 
+  height: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .la-ball-fall > div {
     width: 10px;
