--- a/sass/forms-main.scss
+++ b/sass/forms-main.scss
@@ -1,34 +1,48 @@
-@import "helpers/px-to-rem";
-@import "helpers/appearance";
-@import "inputs/text";
-@import "inputs/button";
-@import "inputs/radio";
-@import "inputs/checkbox";
-@import "inputs/select";
+@use "sass:color";
+@use "helpers/px-to-rem" as *;
+@use "helpers/appearance" as *;
+@use "inputs/text" as *; 
+@use "inputs/button" as *;
+@use "inputs/radio" as *;
+@use "inputs/checkbox" as *; 
+@use "inputs/select" as *;
 
-.mindevents-forms {
+  
+.mindevents-forms {  
   input[type=text],
   input[type=url],
   input[type=email],
   input[type=password],
-  input[type=number],
-  input[type=time] {
+  input[type=number], 
+  input[type=time] { 
     @include sassy-text;
+  } 
+  textarea {
+    @include sassy-textarea;  
+  } 
+
+  &:focus {
+    border-color: rgb(217, 67, 160);
   }
 
-  textarea {
-    @include sassy-textarea;
+  p {
+    &.label {
+      font-weight: 600;
+      margin-bottom: 0.2rem;
+      margin-top: 1rem;
+    }
   }
-  .select-wrap {
+  .select-wrap {  
+    display: flex;
     select {
       max-width: unset;
       background: unset;
     }
     @include sassy-select;
-  }
+  } 
   input.validate {
-    border: 1px solid $danger;
-    background: lighten($danger, 35%);
+    border: 1px solid rgba(201,73,73, 1);
+    background: color.adjust(rgba(201,73,73, 1), $lightness: 35%);
   }
 
 
