--- a/sass/helpers/_px-to-rem.scss
+++ b/sass/helpers/_px-to-rem.scss
@@ -1,4 +1,4 @@
-@function rem($pxval) {
+@function pxtorem($pxval) {
   $base: 16;
-  @return ($pxval / $base) * 1rem;
+  @return (calc($pxval / $base)) * 1rem;
 }
